	`fill-column' to the minimum width of windows displaying
	`*twittering*' buffer. Thanks to Naohiro Aota.

	* twittering-mode.el (twittering-render-timeline): take account of
	multiple windows displaying `*twittering*' buffer.
	Thanks to Naohiro Aota.

	* twittering-mode.el (twittering-format-status): fix an incorrect
	index on filling text for the specifier "%t".

2010-01-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-timeline-spec-to-host-method):
	return query string as a element of returned list.
	(twittering-host-method-to-timeline-spec): receive query string as
	a optional argument.
	(twittering-http-get): remove special adjustment for search
	method, which is now unnecessary.
	(twittering-get-tweets): always receive query string as an
	argument for search method.
	(twittering-get-search): removed.
	(twittering-get-and-render-timeline): send query string if the
	given spec is `search'.
	(twittering-search): execute search via
	`twittering-get-and-render-timeline'.

	* twittering-mode.el (twittering-timeline-spec-to-string): modify
	the string format of `search' spec.
	(twittering-extract-timeline-spec): likewise.

2010-01-22  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-initial-timeline-spec-string):
	Change value to ":home" from ":friends".

	* twittering-mode.el (twittering-status-to-status-datum): Don't
	refer to `twittering-use-native-retweet'.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Fix a reference to `mes' as a variable, not as a function.

2010-01-22  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-fill-string): add new function
	for generating filled string.
	(twittering-format-status): use `twittering-fill-string'.
	(twittering-render-timeline): remove unnecessary binding of the
	variable `fill-column'.

2010-01-22  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el: Add search support (which was originally